Feat/public access
* feat: add common store list getter endpoint

* feat: implement get store by id endpoint with businesshours check utils

* feat: implement get featured Store

* feat: implement get related category tree with grpc

* fix: replace getRelatedIds return statement by ids array

* feat: implement follow and unfollow store
